--- a/index.html
+++ b/index.html
@@ -1,57 +1,58 @@
-<!DOCTYPE html>
-<html lang="ru">
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Анализатор звука</title>
+    <title>Sound Intensity Analyzer</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background: linear-gradient(to bottom, #f0f4f8, #dbeafe);
-            margin: 0;
-            padding: 0;
-        }
-        h1 {
-            margin-top: 20px;
-            color: #1e3a8a;
-        }
-        p {
-            color: #333;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 18px;
-            background-color: #2563eb;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            margin-top: 10px;
-            transition: background 0.3s ease;
-        }
-        button:hover {
-            background-color: #1e40af;
-        }
-        button:disabled {
-            background-color: #94a3b8;
-            cursor: not-allowed;
-        }
-        canvas {
-            border: 1px solid #000;
-            background: white;
-            margin-top: 20px;
-        }
-        #status {
-            font-weight: bold;
-            margin-top: 10px;
-        }
+        body { font-family: Arial, sans-serif; text-align: center; }
+        canvas { border: 1px solid black; margin-top: 20px; }
+        #status { color: red; }
     </style>
 </head>
 <body>
     <h1>Анализ интенсивности звука</h1>
-    <p>Нажмите кнопку, чтобы записать 10 секунд звука и построить график интенсивности.</p>
-    <button id="startBtn">🎙 Начать запись</button>
-    <p id="status"></p>
+    <p>Нажмите кнопку для записи 30 секунд звука.</p>
+    <button id="startBtn">Записать</button>
+    <p id="status">Для запуска двойным кликом: откройте chrome://flags, найдите #unsafely-treat-insecure-origin-as-secure, добавьте путь к файлу (например, file:///C:/path/to/index.html), перезапустите Chrome.</p>
     <canvas id="graph" width="800" height="400"></canvas>
 
     <script>
@@ -59,68 +60,49 @@
         const status = document.getElementById('status');
         const canvas = document.getElementById('graph');
         const ctx = canvas.getContext('2d');
-
-        const DURATION = 10; // секунд
+        const DURATION = 30;
+        const SAMPLE_RATE = 44100;
         const CHUNK_SIZE = 1024;
-
         let audioContext;
         let scriptProcessor;
         let audioData = [];
 
-        // Предупреждение при запуске без HTTPS
-        if (window.location.protocol !== 'https:' && window.location.hostname !== 'localhost') {
-            status.textContent = '⚠ Запустите через HTTPS или GitHub Pages для работы с микрофоном.';
-            startBtn.disabled = true;
-            throw new Error('Use HTTPS or localhost for microphone access.');
-        }
-
-        // Проверка поддержки API
-        if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
-            status.textContent = '❌ Ваш браузер не поддерживает работу с микрофоном.';
-            startBtn.disabled = true;
-        }
-
         startBtn.addEventListener('click', async () => {
             try {
-                status.textContent = '🔍 Запрос доступа к микрофону...';
-                const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-
-                audioContext = new (window.AudioContext || window.webkitAudioContext)();
-                await audioContext.resume();
-
+                status.textContent = 'Запрос доступа к микрофону...';
+                const stream = await navigator.mediaDevices.getUserMedia({ audio: { sampleRate: SAMPLE_RATE } });
+                audioContext = new AudioContext({ sampleRate: SAMPLE_RATE });
                 const source = audioContext.createMediaStreamSource(stream);
                 scriptProcessor = audioContext.createScriptProcessor(CHUNK_SIZE, 1, 1);
 
-                audioData = [];
                 scriptProcessor.onaudioprocess = (event) => {
-                    const input = event.inputBuffer.getChannelData(0);
+                    const input = event.inputBuffer.getChannelData(0).slice();
                     audioData.push(...input);
                 };
 
                 source.connect(scriptProcessor);
                 scriptProcessor.connect(audioContext.destination);
-
                 startBtn.disabled = true;
-                status.textContent = '🎤 Идёт запись...';
+                status.textContent = 'Запись звука...';
 
                 setTimeout(() => {
                     scriptProcessor.disconnect();
                     source.disconnect();
                     stream.getTracks().forEach(track => track.stop());
                     audioContext.close();
-                    status.textContent = '📊 Обработка данных...';
+                    status.textContent = 'Обработка данных...';
                     processAudio();
                 }, DURATION * 1000);
-
             } catch (err) {
-                status.textContent = `Ошибка: ${err.message}`;
-                console.error(err);
+                status.textContent = `Ошибка: ${err.message}. Убедитесь, что микрофон разрешен и Chrome-флаг настроен для file://.`;
+                console.error('Error:', err);
+                startBtn.disabled = false;
             }
         });
 
         function processAudio() {
             if (audioData.length === 0) {
-                status.textContent = '❌ Звук не записан.';
+                status.textContent = 'Ошибка: данные звука не записаны';
                 startBtn.disabled = false;
                 return;
             }
@@ -135,44 +117,88 @@
                 rms.push(Math.sqrt(sum / chunk.length));
             }
 
-            drawGraph(rms);
-            status.textContent = '✅ График построен!';
+            // Интегральная кривая, нормированная по единице
+            const integral = [];
+            let cumulativeSum = 0;
+            for (let i = 0; i < rms.length; i++) {
+                cumulativeSum += rms[i];
+                integral.push(cumulativeSum);
+            }
+            const maxIntegral = Math.max(...integral, 0.001);
+            const normalizedIntegral = integral.map(val => val / maxIntegral);
+
+            const timeStep = DURATION / rms.length;
+            drawGraph(normalizedIntegral, timeStep);
+            status.textContent = 'График построен!';
             startBtn.disabled = false;
         }
 
-        function drawGraph(rms) {
+        function drawGraph(data, timeStep) {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.beginPath();
 
-            const maxRms = Math.max(...rms, 0.001);
-            rms.forEach((value, index) => {
-                const x = (canvas.width / rms.length) * index;
-                const y = canvas.height - (value / maxRms) * canvas.height * 0.9;
+            // Сетка
+            ctx.beginPath();
+            ctx.strokeStyle = '#ddd';
+            ctx.lineWidth = 0.5;
+
+            // Вертикальная сетка (шаг 0.1)
+            for (let i = 0; i <= 1; i += 0.1) {
+                const y = canvas.height - i * canvas.height;
+                ctx.moveTo(0, y);
+                ctx.lineTo(canvas.width, y);
+            }
+
+            // Горизонтальная сетка (шаг 1 секунда)
+            for (let i = 0; i <= DURATION; i += 1) {
+                const x = (i / DURATION) * canvas.width;
+                ctx.moveTo(x, 0);
+                ctx.lineTo(x, canvas.height);
+            }
+            ctx.stroke();
+
+            // Кривая
+            ctx.beginPath();
+            ctx.strokeStyle = 'blue';
+            ctx.lineWidth = 2;
+            data.forEach((value, index) => {
+                const x = (canvas.width / data.length) * index;
+                const y = canvas.height - value * canvas.height * 0.9;
                 if (index === 0) ctx.moveTo(x, y);
                 else ctx.lineTo(x, y);
             });
-
-            ctx.strokeStyle = '#2563eb';
-            ctx.lineWidth = 2;
             ctx.stroke();
 
             // Оси
             ctx.beginPath();
+            ctx.strokeStyle = 'black';
+            ctx.lineWidth = 1;
             ctx.moveTo(0, canvas.height);
             ctx.lineTo(canvas.width, canvas.height);
             ctx.moveTo(0, 0);
             ctx.lineTo(0, canvas.height);
-            ctx.strokeStyle = '#000';
-            ctx.lineWidth = 1;
             ctx.stroke();
 
-            // Подписи
-            ctx.font = '14px Arial';
-            ctx.fillStyle = '#000';
-            ctx.fillText('Время', canvas.width / 2 - 20, canvas.height - 5);
+            // Метки шкалы
+            ctx.font = '12px Arial';
+            ctx.fillStyle = 'black';
+
+            // Горизонтальная ось (время, шаг 1 сек)
+            for (let i = 0; i <= DURATION; i += 1) {
+                const x = (i / DURATION) * canvas.width;
+                ctx.fillText(i, x - 5, canvas.height - 5);
+            }
+
+            // Вертикальная ось (нормированная интенсивность, шаг 0.1)
+            for (let i = 0; i <= 1; i += 0.1) {
+                const y = canvas.height - i * canvas.height;
+                ctx.fillText(i.toFixed(1), 5, y + 5);
+            }
+
+            // Подписи осей
+            ctx.fillText('Время (с)', canvas.width / 2, canvas.height - 20);
             ctx.save();
             ctx.rotate(-Math.PI / 2);
-            ctx.fillText('Интенсивность (RMS)', -canvas.height / 2 - 40, 15);
+            ctx.fillText('Нормированная интегральная интенсивность', -canvas.height / 2, 15);
             ctx.restore();
         }
     </script>
