--- a/index.html
+++ b/index.html
@@ -134,10 +134,12 @@
             // ограничение по наклону (горизонтальные участки сохраняют длительность)
             const timeStep = DURATION / rms.length;
             let constrained = [normalizedIntegral[0]];
+            let flatSegments = [];
             for (let i = 1; i < normalizedIntegral.length; i++) {
                 const slope = (normalizedIntegral[i] - constrained[i-1]) / timeStep;
                 if (slope > 0.15) {
                     constrained.push(constrained[i-1]); // горизонтальный участок
+                    flatSegments.push(i); // отмечаем индекс среза
                 } else {
                     constrained.push(normalizedIntegral[i]);
                 }
@@ -147,13 +149,13 @@
             const maxVal = Math.max(...constrained, 0.001);
             constrained = constrained.map(v => v / maxVal);
 
-            drawGraph(constrained, timeStep);
+            drawGraph(constrained, timeStep, flatSegments);
             status.textContent = '✅ Обработка завершена';
             graphTitle.style.display = 'block';
             startBtn.disabled = false;
         }
 
-        function drawGraph(data, timeStep) {
+        function drawGraph(data, timeStep, flatSegments) {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             // сетка
@@ -172,15 +174,29 @@
             }
             ctx.stroke();
 
-            // график
+            // график (обычные участки)
             ctx.beginPath();
             ctx.strokeStyle = '#2563eb';
             ctx.lineWidth = 2;
-            data.forEach((value, index) => {
-                const x = (canvas.width / data.length) * index;
-                const y = canvas.height - value * canvas.height;
-                if (index === 0) ctx.moveTo(x, y);
+            for (let i = 0; i < data.length; i++) {
+                const x = (canvas.width / data.length) * i;
+                const y = canvas.height - data[i] * canvas.height;
+                if (i === 0) ctx.moveTo(x, y);
                 else ctx.lineTo(x, y);
+            }
+            ctx.stroke();
+
+            // красные участки (срезанные)
+            ctx.beginPath();
+            ctx.strokeStyle = 'red';
+            ctx.lineWidth = 2;
+            flatSegments.forEach(i => {
+                const x1 = (canvas.width / data.length) * (i-1);
+                const y1 = canvas.height - data[i-1] * canvas.height;
+                const x2 = (canvas.width / data.length) * i;
+                const y2 = canvas.height - data[i] * canvas.height;
+                ctx.moveTo(x1, y1);
+                ctx.lineTo(x2, y2);
             });
             ctx.stroke();
 
